# gpu-agent-opt

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: run_with_auto_annotate.py
src/gpu_agent_opt/: __init__.py  agent.py  cli.py  executor.py  generator.py  knowledge.py  optimizer.py  profiler.py
src/gpu_agent_opt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
