[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-agent-opt"  # <-- use hyphens for PyPI, not underscores
version = "0.1.0"
description = "AI agent framework for GPU kernel autotuning and optimization"
readme = "README.md"
authors = [
    { name = "Atul Vaish", email = "admin@aifusion.in" }
]
license = { text = "MIT" }  # or Apache-2.0, BSD, etc.
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "rasterio",
]

[project.urls]
Homepage = "https://github.com/intelav/gpu_agent_opt"
Repository = "https://github.com/intelav/gpu_agent_opt"
Issues = "https://github.com/intelav/gpu_agent_opt/issues"

[tool.setuptools.packages.find]
where = ["src"]
